--- a/Test50.uproject
+++ b/Test50.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Test50",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"BlueprintGraph"
+			]
 		},
 		{
 			"Name": "FSM",
@@ -27,6 +30,11 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "SMSystem",
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/916643d0c665469594233cb0487e6d3d"
 		}
 	]
 }
